fix (client): scrollbar bug fixed

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -27,7 +27,7 @@
   }
 
   scrollbar-color: $secondary-color $darker-color; /* thumb and track color */
-  scrollbar-width: 6px;
+  scrollbar-width: thin;
 }
 
 body {
